# jarvis

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SKILL_LICENSING.md  dev.sh  docker-compose.yaml
backend/: .dockerignore  .env.example  ADDING_AGENT_GUIDE.md  Dockerfile  Dockerfile.base  README.md  agent.py  deployment_guide.md  docker-compose.yaml  fastagent.config.yaml  fastagent.secrets.yaml.example  pyproject.toml  server.py
backend/.fast-agent/agent_cards/: CrawlStoriesAgent.md  FinanceAgent.md  ResearchAgent.md
backend/.fast-agent/skills/: _builtin.yaml
backend/config/: holiday_presets.yaml  model_pricing.yaml
backend/core/: agent_registry_db.py  auth.py  auth_cookies.py  csrf.py  database.py  logging_config.py  preflight.py  secrets_crypto.py  session.py  webauthn.py
backend/docs/: agile_team_edge_cases.md
backend/helpers/: agent_identity.py  audio_cache.py  crawl_markers.py  http_errors.py  http_safety.py  logging_filters.py  memory_triggers.py  path_safety.py  story_reader.py  text_processing.py  tts_rules.py
backend/middleware/: setup_gate.py
backend/routes/: __init__.py  agent_timeline.py  agents.py  approvals.py  auth.py  chat.py  context_compaction.py  gateways.py  inject.py  library.py  mcp.py  memory.py  memory_settings.py  notifications.py  oauth.py  scheduler.py  sessions.py  settings.py  setup.py  skills.py  stories.py  system.py  team_template.py  team_templates_factory.py  token_usage.py  tts.py  voice.py  ws_voice.py  yaml_config.py
backend/scripts/: analyze_agent_session.py  backfill_memory_confidence.py  build-base-image.sh  cleanup_jlp_artifacts.py  cleanup_orphan_spawns.py  migrate_single_user.py  patch_team_template.py  rotate_master_key.py  show_api_key.py
backend/services/: activity_stream.py  agent_definitions.py  agent_message_stream.py  approval_gate.py  approval_rpc_handlers.py  approval_service.py  background_jobs.py  config_service.py  context_compaction.py  context_persistence.py  crawl_poller.py  cron_scheduler.py  dynamic_agents.py  gh_credential_sync.py  git_credential_sync.py  google_oauth.py  history.py  inject_resume.py  library_manager.py  llm_provider_sync.py  mcp_admin_service.py  mcp_attachments.py  mcp_catalog.py  mcp_rpc_handlers.py  mcp_runtime.py  mcp_server_manager.py  meeting_events.py  meeting_hooks_bridge.py  pause_controller.py  pause_manager.py  pregen_stream.py  pricing.py  repo_config.py  runtime_config.py  runtime_rpc.py  secret_utils.py  session_service.py  shared_state.py  skill_rpc_handlers.py  skill_service.py  (+14 more)
backend/services/gateways/: README.md  __init__.py  base.py  bot_api.py  commands.py  config.py  manager.py  registry.py  session_map.py  telegram.py  zalo.py
backend/services/indexing/: chunker.py  consistency_service.py  embedding_provider.py  fts_index.py  ladybug_store.py  memory_index_worker.py  outbox_service.py  projector.py  qdrant_indexer.py
backend/services/memory/: __init__.py  candidate_service.py  communication_capture.py  confidence.py  conflict.py  curator.py  fast_extractor.py  knowledge_graph.py  memory_service.py  model_prefetch.py  models.py  retrieval_hook.py  rpc_handlers.py  sensitivity.py  settings.py
backend/services/retrieval/: budget.py  cache.py  contracts.py  evidence_builder.py  fusion.py  intent_gate.py  intent_router.py  ledger.py  orchestrator.py  quality_gate.py  reranker.py
backend/services/stt_backends/: __init__.py  _ws_streaming.py  faster_whisper.py  gipformer_vi.py  soniox.py  types.py
backend/services/tts_backends/: __init__.py  soniox.py
backend/team_templates/: agile_team.yaml  research_team.yaml
backend/tests/: conftest.py  test_context_persistence.py  test_integration_phase3.py  test_meeting_room_transcript.py  test_skill_resolution.py  test_stt_protocol_conformance.py  test_subprocess_env_vars.py  test_team_agent_naming.py  test_team_session.py  test_token_delta.py  test_voice_backend_flags.py  test_ws_streaming_lifecycle.py
backend/tests/e2e/: README.md  __init__.py  harness.py  scripted_llm.py  subprocess_entry.py  test_approval_comment_route_e2e.py  test_audio_reader_flow.py  test_chat_route.py  test_credential_missing.py  test_cron_approval_route_e2e.py  test_effective_status_e2e.py  test_inject_route.py  test_jarvis_repo_flow.py  test_meeting_full_flow.py  test_multi_tool_chain.py  test_orchestrator_result_flow.py  test_scripted_llm_loader.py  test_setup_wizard_flow.py  test_soniox_realtime_flow.py  test_subprocess_spawn.py  test_tag_relay_hook.py  test_team_multi_member.py  test_team_spawn.py
backend/tests/test_core/: test_csrf.py  test_database.py  test_logging_config.py  test_meeting_skills.py  test_secrets_crypto.py  test_session.py  test_webauthn.py
backend/tests/test_eval/: test_memory_eval.py  test_rerank_gate_eval.py
backend/tests/test_helpers/: test_agent_identity.py  test_crawl_markers.py  test_http_safety.py  test_logging_filters.py  test_path_safety.py  test_text_processing.py  test_tts_rules.py
backend/tests/test_routes/: test_agents.py  test_agents_dynamic_crud.py  test_auth.py  test_auth_session.py  test_chat_tts_contract.py  test_context_compaction_routes.py  test_inject_path_a_feedback.py  test_memory_settings_route.py  test_oauth.py  test_passkey_routes.py  test_preflight.py  test_sessions.py  test_settings.py  test_setup.py  test_setup_gate.py  test_skills.py  test_startup_readiness.py  test_system.py  test_team_template_routes.py  test_team_templates_factory.py  test_voice_routes.py  test_ws_voice.py  test_ws_voice_auth.py  test_yaml_config.py
backend/tests/test_services/: conftest.py  (+104 more)
backend/tools/: approval_server.py  calendar_server.py  crawl_resume.py  cron_server.py  gmail_server.py  google_api_errors.py  iot_server.py  library_server.py  mcp_admin_server.py  media_server.py  memory_server.py  runtime_rpc_client.py  skill_server.py  story_server.py  team_template_server.py  time_server.py
xiaozhi_integration/: .env.example  .gitignore  README.md  jarvis_mcp_server.py  mcp_pipe.py  pyproject.toml
(+516 files in other folders)
