[project]
name = "xiaozhi-integration"
version = "0.1.0"
description = "Bridges a Xiaozhi ESP32 voice device with the Jarvis backend over MCP (experimental)."
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "websockets>=16.0",
]
